# Multi-Agent-Investment-Research-Industry-Analysis-System

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: analysis_agent.py  research_agent.py  risk_agent.py  run_triage_demo.py  supervisor_agent.py  triage_agent.py
app/api/: deps.py  routes.py  schemas.py
app/db/: init_db.py  schema.sql
app/llm/: client.py  settings.py
app/memory/: manager.py  sqlite_store.py
app/models/: agent_outputs.py
app/services/: research_service.py
app/tools/: china_research_tools.py  mock_research_tools.py  registry.py
app/workflow/: run_workflow_demo.py  runner.py
docs/: agent_outputs.md  agent_system_sop.md  agents.md  api.md  database_schema.md  llm.md  testing.md  tools.md  workflow.md
tests/: run_tests.py  test_agent_outputs.py  test_analysis_agent.py  test_api_routes.py  test_china_research_tools.py  test_llm_settings.py  test_memory_manager.py  test_research_agent.py  test_research_service.py  test_risk_agent.py  test_sqlite_store.py  test_supervisor_agent.py  test_tools.py  test_triage_agent.py  test_workflow_runner.py
