[project]
name = "multi-agent-investment-research"
version = "0.1.0"
description = "Multi-agent investment research and industry analysis system."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5.0",
  "fastapi>=0.115,<1.0",
  "openai>=2.0,<3.0",
  "pydantic>=2.0,<3.0",
  "requests>=2.32,<3.0",
  "uvicorn>=0.33,<1.0",
]
